Finished adding outline to notebooks + created separate viz notebook

--- a/overview.ipynb
+++ b/overview.ipynb
@@ -93,14 +93,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391fb929",
+   "id": "61d56ebb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a37b36ff",
+   "id": "9b7d5f8e",
    "metadata": {},
    "source": [
     "Depending on the dataset, fit one (or more) of the following models:\n",
@@ -113,14 +113,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1acfe4a",
+   "id": "aebdcdab",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b6587bb0",
+   "id": "194016e3",
    "metadata": {},
    "source": [
     "How does the model perform? How would you improve it with more time?"
@@ -129,7 +129,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b86a3909",
+   "id": "04b7e8fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe2bca6",
+   "metadata": {},
+   "source": [
+    "#### GNN Visualization $\\rightarrow$ see `viz.ipynb` notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a7dbe3",
+   "metadata": {},
+   "source": [
+    "## Extra credit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdfe3049",
+   "metadata": {},
+   "source": [
+    "Can you wrap the above in basic MLOps? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaac2164",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "537d0ef5",
+   "metadata": {},
+   "source": [
+    "How about model explainability? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a49ddfc5",
    "metadata": {},
    "outputs": [],
    "source": []
